--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,43 @@ nav {
   color: #e2e3e4;
   display: flex;
   text-indent: 30px;
+  align-items: center;
+  height: 10vh;
 }
 
 nav > h1 {
   letter-spacing: 3px;
+}
+
+.nav-bar {
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: #353840;
+  padding: 15px;
+  cursor: pointer;
+}
+
+.nav-bar > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.nav-bar > ul > li {
+  margin-top: 10px;
+  margin-right: 15px;
+}
+
+.nav-bar {
+  overflow: hidden;
+}
+
+.user-icon {
+  border-radius: 50%;
 }
 
 /* Editor CSS */
@@ -57,7 +90,6 @@ textarea:focus {
 }
 
 blockquote {
-
   background-color: #2c2d31;
   border-radius: 10px;
   border-left: solid 10px #c1715e;
@@ -69,7 +101,7 @@ blockquote {
   max-width: 80%;
 }
 
-ul li {
+.container > ul li {
   margin: 0px;
   list-style: none;
   display: flex;
@@ -78,7 +110,7 @@ ul li {
   gap: 10px;
 }
 
-ul li::before {
+.container > ul li::before {
   content: "• ";
   color: #c1715e;
   font-size: 30px;
@@ -90,10 +122,29 @@ ul li::before {
   color: #b7b8bd;
   padding: 10px;
   padding-left: 20px;
+  padding-right: 30px;
   letter-spacing: 2px;
   font-weight: 300;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header > p {
+  margin: 0;
 }
 
 .preview-container {
   padding-left: 10px;
+}
+
+hr {
+  margin-right: 30px;
+}
+
+/* Auth CSS */
+
+.auth-container {
+  min-width: 100vw;
+  min-height: 100vh;
 }
